--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -2,9 +2,10 @@ html {
     height: 100%;
 }
 
-body {
+.backgroundImg {
     background-image: url("../images/background.jpg");
-    height: 100%;
+    background-size: 100% 150%;
+    background-repeat: repeat-y;
 }
 
 p {
@@ -14,6 +15,14 @@ p {
 hr {
     margin-bottom: 15px;
     margin-top: 15px;
+}
+
+.about {
+    font-size: 30px;
+    color: #3b3b3b;
+    margin: 20px;
+    /* padding-bottom: 20px; */
+    /* border-bottom: 2px solid #dddddd; */
 }
 
 #myName {
@@ -56,14 +65,6 @@ hr {
 
 #content {
     width: 960px;
-}
-
-#about {
-    font-size: 30px;
-    color: #3b3b3b;
-    margin: 20px;
-    /* padding-bottom: 20px; */
-    /* border-bottom: 2px solid #dddddd; */
 }
 
 #pageMain {
